--- a/pure-sagemaker-workshop/PROD3.InferencePipeline.ipynb
+++ b/pure-sagemaker-workshop/PROD3.InferencePipeline.ipynb
@@ -44,7 +44,7 @@
     "    sql=\"select * from resellers_sample\",\n",
     "    database=\"implementationdb\"\n",
     ")\n",
-    "df_r = session.pandas.read_sql_athena(\n",
+    "df_res = session.pandas.read_sql_athena(\n",
     "    sql=\"select * from reseller\",\n",
     "    database=\"implementationdb\"\n",
     ")"
