--- a/pure-sagemaker-workshop/DS1.Preparation.ipynb
+++ b/pure-sagemaker-workshop/DS1.Preparation.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#! pip install awswrangler"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,7 +27,7 @@
    "outputs": [],
    "source": [
     "# your bucket name\n",
-    "your_bucket = 'XXXXXXXXX'"
+    "your_bucket = 'XXXXXXXXXXX'"
    ]
   },
   {
@@ -27,9 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://ml-lab-mggaska.s3.amazonaws.com/sales-forecast/billing/billing_sm.csv\n",
-    "!wget https://ml-lab-mggaska.s3.amazonaws.com/sales-forecast/reseller/reseller_sm.csv\n",
-    "!wget https://ml-lab-mggaska.s3.amazonaws.com/sales-forecast/awswrangler-0.0b2-py3.6.egg"
+    "!wget https://ml-lab-mggaska.s3.amazonaws.com/billing_sm.csv\n",
+    "!wget https://ml-lab-mggaska.s3.amazonaws.com/reseller_sm.csv\n",
+    "!wget https://ml-lab-mggaska.s3.amazonaws.com/awswrangler-0.0b2-py3.6.egg"
    ]
   },
   {
@@ -39,6 +48,8 @@
    "outputs": [],
    "source": [
     "import boto3, os\n",
+    "import awswrangler\n",
+    "\n",
     "boto3.Session().resource('s3').Bucket(your_bucket).Object(os.path.join('billing', 'billing_sm.csv')).upload_file('billing_sm.csv')\n",
     "boto3.Session().resource('s3').Bucket(your_bucket).Object(os.path.join('reseller', 'reseller_sm.csv')).upload_file('reseller_sm.csv')\n",
     "boto3.Session().resource('s3').Bucket(your_bucket).Object(os.path.join('python', 'awswrangler-0.0b2-py3.6.egg')).upload_file('awswrangler-0.0b2-py3.6.egg')\n"
@@ -48,39 +59,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Create Crawler\n",
+    "## 2. Create a Crawler\n",
     "\n",
-    "To use this csv information in the context of a Glue ETL, first we have to create a Glue crawler pointing to the location of each file. The crawler will try to figure out the data types of each column. The safest way to do this process is to create one crawler for each table pointing to a different location.\n",
+    "To use this csv information in the context of a Glue ETL, first we have to create a Glue crawler pointing to the location of each file. The crawler will try to figure out the data types of each column. \n",
     "\n",
     "1. Create an IAM role GlueCrawlerRole with the policy AWSGlueServiceRole.\n",
     "2. Under Services, go to AWS Glue.\n",
-    "3. Under crawlers Add Crawler and two crawlers: create one pointing to each S3 location (one to billing and one to reseller)\n",
+    "3. Under crawlers Add a Crawler : create one pointing to different each S3 locations (one to billing and one to reseller)\n",
     "\n",
-    "    3.1 Name: Billing, Data Store, Specific Path in my Account, Navigate to your bucket and your folder Billing, use an existing IAM role AWSGlueServiceRole, add database implementationdb, Next, Finish\n",
+    "    3.1 Fill  a Crawler Name: point a Data Store to specific S3 path, Navigate to your bucket and your folder: /billing, click \"Next\"\n",
     "    \n",
-    "    3.2 After the crawler is created select Run it now.\n",
+    "    3.2 Specify \"Yes\" to add a new Data Store and navigate to your bucket and your folder: /reseller, Click \"Next\" and select \"No\" when asking for add more Data stores, use an existing IAM role \"AWSGlueServiceRole\", add database \"implementationdb\", Click on \"Next\" and \"Finish\"\n",
     "    \n",
-    "    3.3 Name: Reseller, Data Store, Specific Path in my Account, Navigate to your bucket and your folder Reseller, use an existing IAM role AWSGlueServiceRole, select database implementationdb, Next, Finish\n",
+    "    3.3 After the crawler is created select \"Run it now\".\n",
     "    \n",
-    "    3.4 After the crawler is created select Run it now.\n",
     "\n",
-    "After both crawlers run you should see one table is been adeed for each. You can use Athena to inspect the tables and double check the data is been added properly."
+    "After the crawler run you should see two tables has been added for each folder. You can use Athena to inspect the tables and double check the data has been added properly."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Create Sample View in Athena\n",
-    "\n",
-    "When dealing with medium or large datasets, it's a good practice to work on a sample. This will allow you to perform faster experiments regarding feature engineering, data exploration, etc. \n",
-    "\n",
-    "Under Services > Athena we can create the following view on the query editor that will sample only a 10% of the resellers from the billing dataset.\n",
-    "\n",
-    "    CREATE VIEW resellers_sample AS\n",
-    "    select * from billing where \n",
-    "    id_reseller in (select distinct id_reseller from reseller TABLESAMPLE BERNOULLI(10))\n"
+    "## 3. Execute a query to create a sample View in Athena"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "session = awswrangler.Session()\n",
+    "query=('CREATE VIEW resellers_sample AS SELECT *'\n",
+    "       'FROM billing where id_reseller '\n",
+    "       'in (select distinct id_reseller from reseller TABLESAMPLE BERNOULLI(10))')\n",
+    "\n",
+    "df = session.pandas.read_sql_athena(\n",
+    "    sql=query,\n",
+    "    database=\"implementationdb\",\n",
+    "    max_result_size=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
