fix training job

--- a/pure-sagemaker-workshop/DS1.Preparation.ipynb
+++ b/pure-sagemaker-workshop/DS1.Preparation.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! pip install awswrangler"
+    "! pip install awswrangler"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# your bucket name\n",
-    "your_bucket = 'XXXXXXXXXXX'"
+    "your_bucket = 'XXXXXXXXX'"
    ]
   },
   {
@@ -63,7 +63,7 @@
     "\n",
     "To use this csv information in the context of a Glue ETL, first we have to create a Glue crawler pointing to the location of each file. The crawler will try to figure out the data types of each column. \n",
     "\n",
-    "1. Create an IAM role GlueCrawlerRole with the policy AWSGlueServiceRole.\n",
+    "1. Create an IAM role GlueCrawlerRole with the policy AWSGlueServiceRole and S3FullAccess.\n",
     "2. Under Services, go to AWS Glue.\n",
     "3. Under crawlers Add a Crawler : create one pointing to different each S3 locations (one to billing and one to reseller)\n",
     "\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
