--- a/pure-sagemaker-workshop/DS2.ModelDevelopmentOnSample.ipynb
+++ b/pure-sagemaker-workshop/DS2.ModelDevelopmentOnSample.ipynb
@@ -161,6 +161,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pandas.plotting import register_matplotlib_converters\n",
+    "register_matplotlib_converters()\n",
+    "\n",
     "plt.plot(df_mean_by_day['date'], df_mean_by_day['bill'])\n",
     "plt.xticks(rotation='vertical');"
    ]
@@ -420,7 +423,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "objects = X_train.columns\n",
