--- a/pure-sagemaker-workshop/PROD2.ModelTrain.ipynb
+++ b/pure-sagemaker-workshop/PROD2.ModelTrain.ipynb
@@ -139,7 +139,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once launched, you can check in the console the status of the hyperparameter tunning job and the status of each one of the (in this case) 5 tunning jobs created. Once it's finished you can check the name of the best training job, based on the mae metric evaluated on validation. "
+    "Once launched, you can check in the console the status of the hyperparameter tunning job and the status of each one of the (in this case) 5 tunning jobs created. Once it's finished you can check the name of the best training job, based on the mae metric evaluated on validation. \n",
+    "\n",
+    "### Here you need to wait until all the training jobs finish, to return the name of the best training job"
    ]
   },
   {
@@ -148,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tuner.best_training_job()"
+    "#tuner.best_training_job()"
    ]
   },
   {
