--- a/pure-sagemaker-workshop/PROD3.InferencePipeline.ipynb
+++ b/pure-sagemaker-workshop/PROD3.InferencePipeline.ipynb
@@ -287,7 +287,10 @@
    "metadata": {},
    "source": [
     "### Re-order features\n",
-    " Now we have to make sure that the features are in the same order we used for training and that we don't have any extra columns.\n"
+    " Now we have to make sure that the features are in the same order we used for training and that we don't have any extra columns.\n",
+    "\n",
+    "\n",
+    "### Here you are going to need the same columns and order that it's displayed in notebook PROD1 "
    ]
   },
   {
@@ -296,19 +299,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_to_predict_feats = df_to_predict[['mean-last-30', 'mean-last-7', 'std-last-30',\n",
-    "       'days_without_purchase', 'last_bill', 'cluster_0', 'cluster_1',\n",
-    "       'cluster_2', 'cluster_3', 'cluster_4', 'zone_0', 'zone_1', 'zone_2',\n",
-    "       'zone_3', 'zone_4', 'zone_5', 'zone_6', 'zone_7', 'zone_8', 'zone_9',\n",
-    "       'zone_10', 'zone_11', 'zone_12', 'zone_13', 'zone_14', 'zone_15',\n",
-    "       'zone_16', 'zone_17', 'zone_18', 'zone_19', 'zone_20', 'zone_21',\n",
-    "       'zone_22', 'zone_23', 'zone_24', 'zone_25', 'zone_26', 'zone_27',\n",
-    "       'zone_28', 'zone_29', 'zone_30', 'zone_31', 'zone_32', 'zone_33',\n",
-    "       'zone_34', 'zone_35', 'zone_36', 'zone_37', 'zone_38', 'zone_39',\n",
-    "       'zone_40', 'zone_41', 'zone_42', 'zone_43', 'zone_44', 'zone_45',\n",
-    "       'zone_46', 'zone_47', 'zone_48', 'zone_49', 'zone_50', 'zone_51',\n",
-    "       'weekday_0', 'weekday_1', 'weekday_2', 'weekday_3', 'weekday_4',\n",
-    "       'weekday_5', 'weekday_6']]"
+    "# df_to_predict_feats = df_to_predict[['mean-last-30', 'mean-last-7', 'std-last-30',\n",
+    "#        'days_without_purchase', 'last_bill', 'cluster_0', 'cluster_1',\n",
+    "#        'cluster_2', 'cluster_3', 'cluster_4', 'zone_0', 'zone_1', 'zone_2',\n",
+    "#        'zone_3', 'zone_4', 'zone_5', 'zone_6', 'zone_7', 'zone_8', 'zone_9',\n",
+    "#        'zone_10', 'zone_11', 'zone_12', 'zone_13', 'zone_14', 'zone_15',\n",
+    "#        'zone_16', 'zone_17', 'zone_18', 'zone_19', 'zone_20', 'zone_21',\n",
+    "#        'zone_22', 'zone_23', 'zone_24', 'zone_25', 'zone_26', 'zone_27',\n",
+    "#        'zone_28', 'zone_29', 'zone_30', 'zone_31', 'zone_32', 'zone_33',\n",
+    "#        'zone_34', 'zone_35', 'zone_36', 'zone_37', 'zone_38', 'zone_39',\n",
+    "#        'zone_40', 'zone_41', 'zone_42', 'zone_43', 'zone_44', 'zone_45',\n",
+    "#        'zone_46', 'zone_47', 'zone_48', 'zone_49', 'weekday_0', 'weekday_1',\n",
+    "#        'weekday_2', 'weekday_3', 'weekday_4', 'weekday_5', 'weekday_6']]"
    ]
   },
   {
