--- a/pure-sagemaker-workshop/PROD1.ETL.ipynb
+++ b/pure-sagemaker-workshop/PROD1.ETL.ipynb
@@ -245,6 +245,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df['zone'].value_counts().head(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['zone'] = df['zone'].apply(lambda x: x if x in [1019,1050,1031,1033,1051,1067] else 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "le_cluster = LabelEncoder()\n",
     "ohe_cluster = OneHotEncoder(handle_unknown='ignore')\n",
     "df_cluster = pd.DataFrame(ohe_cluster.fit_transform(le_cluster.fit_transform(df['cluster'].fillna('')).reshape(-1, 1)).todense())\n",
