--- a/pure-sagemaker-workshop/PROD3.InferencePipeline.ipynb
+++ b/pure-sagemaker-workshop/PROD3.InferencePipeline.ipynb
@@ -232,6 +232,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_features['zone'] = df_features['zone'].apply(lambda x: x if x in [1019,1050,1031,1033,1051,1067] else 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pickle_in = open(\"preprocessing.pkl\",\"rb\")\n",
     "pipe_list = pickle.load(pickle_in)\n",
     "# [le_cluster,ohe_cluster,le_zone,ohe_zone,le_weekday,ohe_weekday]"
@@ -299,18 +308,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_to_predict_feats = df_to_predict[['mean-last-30', 'mean-last-7', 'std-last-30',\n",
-    "#        'days_without_purchase', 'last_bill', 'cluster_0', 'cluster_1',\n",
-    "#        'cluster_2', 'cluster_3', 'cluster_4', 'zone_0', 'zone_1', 'zone_2',\n",
-    "#        'zone_3', 'zone_4', 'zone_5', 'zone_6', 'zone_7', 'zone_8', 'zone_9',\n",
-    "#        'zone_10', 'zone_11', 'zone_12', 'zone_13', 'zone_14', 'zone_15',\n",
-    "#        'zone_16', 'zone_17', 'zone_18', 'zone_19', 'zone_20', 'zone_21',\n",
-    "#        'zone_22', 'zone_23', 'zone_24', 'zone_25', 'zone_26', 'zone_27',\n",
-    "#        'zone_28', 'zone_29', 'zone_30', 'zone_31', 'zone_32', 'zone_33',\n",
-    "#        'zone_34', 'zone_35', 'zone_36', 'zone_37', 'zone_38', 'zone_39',\n",
-    "#        'zone_40', 'zone_41', 'zone_42', 'zone_43', 'zone_44', 'zone_45',\n",
-    "#        'zone_46', 'zone_47', 'zone_48', 'zone_49', 'weekday_0', 'weekday_1',\n",
-    "#        'weekday_2', 'weekday_3', 'weekday_4', 'weekday_5', 'weekday_6']]"
+    "df_to_predict_feats = df_to_predict[[ 'mean-last-30', 'mean-last-7', 'std-last-30',\n",
+    "       'days_without_purchase', 'last_bill', 'cluster_0', 'cluster_1',\n",
+    "       'cluster_2', 'cluster_3', 'cluster_4', 'cluster_5', 'zone_0', 'zone_1',\n",
+    "       'zone_2', 'zone_3', 'zone_4', 'zone_5', 'zone_6', 'weekday_0',\n",
+    "       'weekday_1', 'weekday_2', 'weekday_3', 'weekday_4', 'weekday_5',\n",
+    "       'weekday_6']]"
    ]
   },
   {
