--- a/pure-sagemaker-workshop/PROD2.ModelTrain.ipynb
+++ b/pure-sagemaker-workshop/PROD2.ModelTrain.ipynb
@@ -141,7 +141,9 @@
    "source": [
     "Once launched, you can check in the console the status of the hyperparameter tunning job and the status of each one of the (in this case) 5 tunning jobs created. Once it's finished you can check the name of the best training job, based on the mae metric evaluated on validation. \n",
     "\n",
-    "### Here you need to wait until all the training jobs finish, to return the name of the best training job"
+    "### Here you need to wait until all the training jobs finish, to return the name of the best training job\n",
+    "\n",
+    "Check the status of your training jobs at <a href='https://console.aws.amazon.com/sagemaker/home?region=us-east-1#/jobs'>the console</a>"
    ]
   },
   {
