--- a/pure-sagemaker-workshop/DS1.Preparation.ipynb
+++ b/pure-sagemaker-workshop/DS1.Preparation.ipynb
@@ -15,7 +15,13 @@
    "source": [
     "## 1. Upload data to S3\n",
     "\n",
-    "First you need to create a bucket for this experiment. Upload the data from the following public location to your own S3 bucket. To facilitate the work of the crawler use two different prefixs (folders): one for the billing information and one for reseller. \n",
+    "First you need to create a bucket for this experiment. Upload the data from the following public location to your own S3 bucket.\n",
+    "\n",
+    "You can create a bucket from the following link: <a href='https://s3.console.aws.amazon.com/s3/home?region=us-east-1'> s3 console </a>\n",
+    "\n",
+    "To facilitate the work of the crawler we will use two different prefixes (folders): one for the billing information and one for reseller. \n",
+    "\n",
+    "\n",
     "\n",
     "### Download the data"
    ]
@@ -48,11 +54,44 @@
    "outputs": [],
    "source": [
     "import boto3, os\n",
-    "import awswrangler\n",
-    "\n",
+    "import awswrangler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "boto3.Session().resource('s3').Bucket(your_bucket).Object(os.path.join('billing', 'billing_sm.csv')).upload_file('billing_sm.csv')\n",
     "boto3.Session().resource('s3').Bucket(your_bucket).Object(os.path.join('reseller', 'reseller_sm.csv')).upload_file('reseller_sm.csv')\n",
     "boto3.Session().resource('s3').Bucket(your_bucket).Object(os.path.join('python', 'awswrangler-0.0b2-py3.6.egg')).upload_file('awswrangler-0.0b2-py3.6.egg')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Add athena full access permissions to SageMaker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker import get_execution_role\n",
+    "\n",
+    "role = get_execution_role()\n",
+    "print(role)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Go to the <a href='https://console.aws.amazon.com/iam/home?region=us-east-1#/roles'>IAM roles console</a> and attach the Amazon Athena full access policy to this role."
    ]
   },
   {
@@ -63,25 +102,41 @@
     "\n",
     "To use this csv information in the context of a Glue ETL, first we have to create a Glue crawler pointing to the location of each file. The crawler will try to figure out the data types of each column. \n",
     "\n",
-    "1. Create an IAM role GlueCrawlerRole with the policy AWSGlueServiceRole and S3FullAccess.\n",
-    "2. Under Services, go to AWS Glue.\n",
-    "3. Under crawlers Add a Crawler : create one pointing to different each S3 locations (one to billing and one to reseller)\n",
+    "\n",
+    "1. On the <a href='https://console.aws.amazon.com/iam/home?region=us-east-1#/roles'>IAM roles console</a> create an IAM role GlueCrawlerRole with the policy AWSGlueServiceRole and S3FullAccess.\n",
+    "\n",
+    "2. Go to  <a href='https://console.aws.amazon.com/glue/home?region=us-east-1#catalog:tab=crawlers'>Glue crawlers console</a> \n",
+    "\n",
+    "3. Add a Crawler : create one pointing to different each S3 locations (one to billing and one to reseller)\n",
     "\n",
     "    3.1 Fill  a Crawler Name: point a Data Store to specific S3 path, Navigate to your bucket and your folder: /billing, click \"Next\"\n",
     "    \n",
     "    3.2 Specify \"Yes\" to add a new Data Store and navigate to your bucket and your folder: /reseller, Click \"Next\" and select \"No\" when asking for add more Data stores, use an existing IAM role \"AWSGlueServiceRole\", add database \"implementationdb\", Click on \"Next\" and \"Finish\"\n",
     "    \n",
     "    3.3 After the crawler is created select \"Run it now\".\n",
-    "    \n",
-    "\n",
-    "After the crawler run you should see two tables has been added for each folder. You can use Athena to inspect the tables and double check the data has been added properly."
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Execute a query to create a sample View in Athena"
+    "## 3. Configure Athena query destination\n",
+    "\n",
+    "Go to the <a href='https://console.aws.amazon.com/athena/home?force&region=us-east-1#query'>Athena console</a>.\n",
+    "\n",
+    "Under Settings in the top right corner set the query results location to s3://YOUR-BUCKET-NAME/athena-results/.\n",
+    "\n",
+    "To verify that your crawlers created correctly you can run the following query:\n",
+    "    \n",
+    "    select * from billing limit 3; \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Execute a query to create a sample View in Athena"
    ]
   },
   {
@@ -104,20 +159,6 @@
     "    max_result_size=1\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
