--- a/pure-sagemaker-workshop/PROD1.ETL.ipynb
+++ b/pure-sagemaker-workshop/PROD1.ETL.ipynb
@@ -36,7 +36,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bucket = 'XXXXXXX'"
+    "bucket = 'zoomagri-mggaska'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store bucket"
    ]
   },
   {
@@ -54,6 +63,24 @@
     "    sql=\"select * from reseller\",\n",
     "    database=\"implementationdb\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store df_r"
    ]
   },
   {
@@ -409,6 +436,16 @@
    "outputs": [],
    "source": [
     "df_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_columns = list(df_train.columns)[1:]\n",
+    "%store pred_columns"
    ]
   },
   {
