--- a/pure-sagemaker-workshop/PROD3.InferencePipeline.ipynb
+++ b/pure-sagemaker-workshop/PROD3.InferencePipeline.ipynb
@@ -39,15 +39,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session = awswrangler.Session()\n",
-    "df = session.pandas.read_sql_athena(\n",
-    "    sql=\"select * from resellers_sample\",\n",
-    "    database=\"implementationdb\"\n",
-    ")\n",
-    "df_res = session.pandas.read_sql_athena(\n",
-    "    sql=\"select * from reseller\",\n",
-    "    database=\"implementationdb\"\n",
-    ")"
+    "%store -r df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store -r df_r"
    ]
   },
   {
@@ -169,7 +170,7 @@
     "    last_bill = group[group['bill'] > 0].sort_values('date',ascending=False).head(1)['bill'].values[0]\n",
     "    return {'weekday':weekday,'mean-last-30':mean_last_30,\n",
     "           'std-last-30':std_last_30,'mean-last-7':mean_last_7,'last_bill':last_bill, \n",
-    "           'id_reseller':group['id_reseller'].max(), 'days_without_purchase':days_without_purchase}"
+    "           'id_reseller':int(group['id_reseller'].max()), 'days_without_purchase':days_without_purchase}"
    ]
   },
   {
@@ -214,7 +215,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_features = df_features.merge(df_res,how='inner',on='id_reseller')"
+    "df_features.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_features = df_features.merge(df_r,how='inner',on='id_reseller')"
    ]
   },
   {
@@ -308,12 +318,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_to_predict_feats = df_to_predict[[ 'mean-last-30', 'mean-last-7', 'std-last-30',\n",
-    "       'days_without_purchase', 'last_bill', 'cluster_0', 'cluster_1',\n",
-    "       'cluster_2', 'cluster_3', 'cluster_4', 'cluster_5', 'zone_0', 'zone_1',\n",
-    "       'zone_2', 'zone_3', 'zone_4', 'zone_5', 'zone_6', 'weekday_0',\n",
-    "       'weekday_1', 'weekday_2', 'weekday_3', 'weekday_4', 'weekday_5',\n",
-    "       'weekday_6']]"
+    "df_to_predict.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store -r pred_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_to_predict_feats = df_to_predict[pred_columns]"
    ]
   },
   {
