--- a/pure-sagemaker-workshop/PROD4.BatchTranform.ipynb
+++ b/pure-sagemaker-workshop/PROD4.BatchTranform.ipynb
@@ -30,8 +30,16 @@
     "# take the best training job from notebook #PROD2\n",
     "best_training_job = 'hpo-invoice-pred-191009-1624-002-2086aff7'\n",
     "role = sagemaker.get_execution_role()\n",
-    "bucket = 'XXXXXXXXX'                     \n",
     "prefix = 'predictions'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store -r bucket"
    ]
   },
   {
@@ -71,12 +79,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure you stored the best_job variable in <a href='./PROD2.ModelTrain.ipynb'>notebook 2 </a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Estimator.attach(best_training_job)"
+    "%store -r best_job"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Estimator.attach(best_job)"
    ]
   },
   {
@@ -86,7 +110,7 @@
    "outputs": [],
    "source": [
     "model_predictor = model.deploy(initial_instance_count=1,\n",
-    "                            instance_type='ml.m4.xlarge')"
+    "                            instance_type='ml.t2.medium')"
    ]
   },
   {
@@ -124,7 +148,7 @@
     "\n",
     "    return np.fromstring(predictions[1:], sep=',')\n",
     "\n",
-    "predictions = predict(df.as_matrix())"
+    "predictions = predict(df.values)"
    ]
   },
   {
