--- a/pure-sagemaker-workshop/PROD2.ModelTrain.ipynb
+++ b/pure-sagemaker-workshop/PROD2.ModelTrain.ipynb
@@ -22,8 +22,16 @@
     "role = sagemaker.get_execution_role()\n",
     "sess = sagemaker.Session()\n",
     "\n",
-    "bucket = sagemaker.Session().default_bucket()                     \n",
     "prefix = 'sagemaker/invoice-prediction'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store -r bucket"
    ]
   },
   {
@@ -139,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once launched, you can check in the console the status of the hyperparameter tunning job and the status of each one of the (in this case) 5 tunning jobs created. Once it's finished you can check the name of the best training job, based on the mae metric evaluated on validation. \n",
+    "Once launched, you can check in the console the status of the hyperparameter tunning job and the status of each one of the (in this case) 2 tunning jobs created. Once it's finished you can check the name of the best training job, based on the mae metric evaluated on validation. \n",
     "\n",
     "### Here you need to wait until all the training jobs finish, to return the name of the best training job\n",
     "\n",
@@ -152,7 +160,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tuner.best_training_job()"
+    "best_job = tuner.best_training_job()\n",
+    "print(best_job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store best_job"
    ]
   },
   {
