--- a/pure-sagemaker-workshop/DS1.Preparation.ipynb
+++ b/pure-sagemaker-workshop/DS1.Preparation.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "!wget https://ml-lab-mggaska.s3.amazonaws.com/billing_sm.csv\n",
     "!wget https://ml-lab-mggaska.s3.amazonaws.com/reseller_sm.csv\n",
-    "!wget https://ml-lab-mggaska.s3.amazonaws.com/awswrangler-0.0b2-py3.6.egg"
+    "!wget https://ml-lab-mggaska.s3.amazonaws.com/awswrangler-1.9.6-py3.6.egg"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "source": [
     "boto3.Session().resource('s3').Bucket(your_bucket).Object(os.path.join('billing', 'billing_sm.csv')).upload_file('billing_sm.csv')\n",
     "boto3.Session().resource('s3').Bucket(your_bucket).Object(os.path.join('reseller', 'reseller_sm.csv')).upload_file('reseller_sm.csv')\n",
-    "boto3.Session().resource('s3').Bucket(your_bucket).Object(os.path.join('python', 'awswrangler-0.0b2-py3.6.egg')).upload_file('awswrangler-0.0b2-py3.6.egg')\n"
+    "boto3.Session().resource('s3').Bucket(your_bucket).Object(os.path.join('python', 'awswrangler-1.9.6-py3.6.egg')).upload_file('awswrangler-1.9.6-py3.6.egg')\n"
    ]
   },
   {
@@ -177,9 +177,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
