Full Implementation with State Machine

--- a/implementation-workshop/Implementation.ipynb
+++ b/implementation-workshop/Implementation.ipynb
@@ -4,16 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implementation with Step Functions\n",
+    "# Implementation with Step Functions\n",
     "\n",
     "Now that we have our data science project built, we want to implement it in a robust and repeteable manner. For this, we are going to deploy the ETL using AWS Glue, and then train and batch transform the input using SageMaker integration with Amazon Step Functions. \n",
     "\n",
-    "This notebook is going to guide you thorugh this process step by step "
+    "This notebook is going to guide you thorugh this process step by step.\n",
+    "\n",
+    "But first you need to create or set your own bucket. SageMaker´s SDK is a good way to start. \n",
+    "\n",
+    "## 1. Upload to an S3 Bucket"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,10 +26,257 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ses = sagemaker.Session()\n",
+    "your_bucket = ses.default_bucket()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2020-12-14 18:34:50--  https://ml-lab-mggaska.s3.amazonaws.com/sales-forecast/billing/billing_sm.csv\n",
+      "Resolving ml-lab-mggaska.s3.amazonaws.com (ml-lab-mggaska.s3.amazonaws.com)... 52.217.108.156\n",
+      "Connecting to ml-lab-mggaska.s3.amazonaws.com (ml-lab-mggaska.s3.amazonaws.com)|52.217.108.156|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 15803443 (15M) [binary/octet-stream]\n",
+      "Saving to: ‘billing_sm.csv’\n",
+      "\n",
+      "billing_sm.csv      100%[===================>]  15.07M  64.8MB/s    in 0.2s    \n",
+      "\n",
+      "2020-12-14 18:34:50 (64.8 MB/s) - ‘billing_sm.csv’ saved [15803443/15803443]\n",
+      "\n",
+      "--2020-12-14 18:34:50--  https://ml-lab-mggaska.s3.amazonaws.com/sales-forecast/reseller/reseller_sm.csv\n",
+      "Resolving ml-lab-mggaska.s3.amazonaws.com (ml-lab-mggaska.s3.amazonaws.com)... 52.217.108.156\n",
+      "Connecting to ml-lab-mggaska.s3.amazonaws.com (ml-lab-mggaska.s3.amazonaws.com)|52.217.108.156|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 210111 (205K) [binary/octet-stream]\n",
+      "Saving to: ‘reseller_sm.csv’\n",
+      "\n",
+      "reseller_sm.csv     100%[===================>] 205.19K  --.-KB/s    in 0.006s  \n",
+      "\n",
+      "2020-12-14 18:34:51 (31.3 MB/s) - ‘reseller_sm.csv’ saved [210111/210111]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://ml-lab-mggaska.s3.amazonaws.com/sales-forecast/billing/billing_sm.csv\n",
+    "!wget https://ml-lab-mggaska.s3.amazonaws.com/sales-forecast/reseller/reseller_sm.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3, os\n",
+    "boto3.Session().resource('s3').Bucket(your_bucket).Object(os.path.join('billing', 'billing_sm.csv')).upload_file('billing_sm.csv')\n",
+    "boto3.Session().resource('s3').Bucket(your_bucket).Object(os.path.join('reseller', 'reseller_sm.csv')).upload_file('reseller_sm.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Create the Glue Crawlers\n",
+    "\n",
+    "To use this csv information in the context of a Glue ETL, first we have to create a Glue crawler pointing to the location of each file. The crawler will try to figure out the data types of each column. The safest way to do this process is to create one crawler for each table pointing to a different location.\n",
+    "\n",
+    "Go to the AWS Console.\n",
+    "Select under Services AWS Glue.\n",
+    "Or follow <a href='https://us-east-1.console.aws.amazon.com/glue/home?region=us-east-1#catalog:tab=crawlers'> this link! </a>       \n",
+    "    \n",
+    "\n",
+    "Under crawlers Add Crawler and two crawlers: create one pointing to each S3 location (one to billing and one to reseller)\n",
+    "* Crawler Name: Billing - Next\n",
+    "* Crawler source type: Data Store - Next\n",
+    "* Add a data store: S3, Specific Path in my Account, Navigate to your bucket and your folder Billing - Next\n",
+    "* Add another data store: no - Next\n",
+    "* Choose an IAM role: create an IAM role billing-crawler-role (if exists, choose the existing) - Next\n",
+    "* Frequency: run on demand - Next\n",
+    "* Crawler’s output: Add database implementationdb - Next\n",
+    "* Finish\n",
+    "\n",
+    "\n",
+    "Tips: \n",
+    "- Make sure you name your Glue data base \"implementationdb\" \n",
+    "- Make sure to point to the S3 folder containing each file, not the actual file\n",
+    "- Make sure to name your db implementationdb\n",
+    "- Make sure to create new roles\n",
+    "\n",
+    "create a new role to run the crawler. Also, don´t forget to run the crawler\n",
+    "\n",
+    "<img src='img/crawler1.png' style='width:400px' />\n",
+    "\n",
+    "<img src='img/crawler2.png' style='width:400px' />\n",
+    "\n",
+    "\n",
+    "\n",
+    "Let’s add the second crawler:\n",
+    "\n",
+    "* Crawler Name: Reseller - Next\n",
+    "* Crawler source type: Data Store - Next\n",
+    "* Add a data store: S3, Specific Path in my Account, Navigate to your bucket and your folder Reseller - Next\n",
+    "* Add another data store: no - Next\n",
+    "* Choose an IAM role: create an IAM role reseller-crawler-role (if exists, choose the existing) - Next\n",
+    "* Frequency: run on demand - Next\n",
+    "* Crawlers’s output: Select database implementationdb - Next\n",
+    "* Finish\n",
+    "\n",
+    "\n",
+    "Tips:\n",
+    "- Use the same database (implementationdb) but create a different role as each crawler need to access a different folder.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Test crawlers on Athena\n",
+    "\n",
+    "Go to the <a href='https://console.aws.amazon.com/athena/home?region=us-east-1#'> Athena Console </a> and hit Get Started.\n",
+    "\n",
+    "Under Settings in the top right corner you can configure an output path for your queries. \n",
+    "You can use the following value:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'s3://sagemaker-us-east-1-646862220717/athena_results/'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f's3://{your_bucket}/athena_results/'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After you set a destination for query results, you can preview the tables created by the crawlers.\n",
+    "\n",
+    "<img src='img/athena1.png' style='width:500px'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Create Glue Job\n",
+    "\n",
+    "First of all, you need to create a role to run the Glue Job. For simplicity we are going to build a role that can be assumed by the Glue Service with administrator access. \n",
+    "\n",
+    "In the <a href='https://console.aws.amazon.com/athena/home?region=us-east-1#'> IAM Console </a>\n",
+    "\n",
+    "* Under use case select Glue\n",
+    "* Under Policies Select Administrator Access\n",
+    "* Name your role GlueAdmin and accept.\n",
+    "\n",
+    "<img src='img/gluerole1.png' style='width:500px'>\n",
+    "<img src='img/gluerole2.png' style='width:500px'>\n",
+    "<img src='img/gluerole3.png' style='width:500px'>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now move to the <a href='https://console.aws.amazon.com/glue/home?region=us-east-1#addJob:'> Glue Job Console </a> and author a new job.\n",
+    "    \n",
+    "\n",
+    "* Name: etlandpipeline\n",
+    "* Role: Create a role named Glueadmin with AdministratorAccess (this is because we are testing)\n",
+    "* Type: Python Shell\n",
+    "* Glue version: Python3 (Glue Version 1.0)\n",
+    "* Select A New Script Authored By you\n",
+    "* Under Maximum Capacity: 1 - Next\n",
+    "\n",
+    "    \n",
+    "Then hit “Save Job and Edit Script”\n",
+    "\n",
+    "You can use the following script to run your job:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job = open('etlandpipeline.py', 'r').read().replace('your_bucket',your_bucket)\n",
+    "print(job)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Create the Step Function\n",
+    "\n",
+    "First you need to create a role that can be assumed by AWS Step Functions and have enough permissions to create and use for inference SageMaker models and run Glue Jobs. \n",
+    "First, we are going to create a role that can be assumed by the service Step Functions and then we are going to modify it to add Administrator Access. You can name this role StepFunctionsAdmin\n",
+    "\n",
+    "\n",
+    "<img src='img/iamstep.png' />\n",
+    "\n",
+    "Tip: In this particular case it can not be done in the same step.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Next go to the <a href='https://console.aws.amazon.com/states/home?region=us-east-1#/statemachines'> Step Functions </a> console and create a new State Machine.\n",
+    "\n",
+    "* Author with code snippets\n",
+    "* Standard\n",
+    "\n",
+    "\n",
+    "In the json place you can use the following script:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker import get_execution_role\n",
+    "\n",
+    "your_role = get_execution_role()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "definition = open('step_function.json', 'r').read().replace('your_bucket',your_bucket).replace('your_role',your_role)\n",
+    "print(definition)"
+   ]
   }
  ],
  "metadata": {
